--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
             <div class="about-flex">
                 <div class="about-text">
                     <p>
-                        Soy **Jacob Pino**, Ingeniero Informático (💻) con una profunda orientación hacia la **Ciberseguridad**. Mi fascinación reside en el dinámico mundo del **hacking ético** y la **protección de sistemas**, buscando siempre entender cómo se detectan y neutralizan las amenazas digitales.
+                        Soy Jacob Pino, Ingeniero Informático 💻 con una profunda orientación hacia la ciberseguridad. Mi fascinación reside en el dinámico mundo del hacking ético y la protección de sistemas, buscando siempre entender cómo se detectan y neutralizan las amenazas digitales.
                     </p>
                     <p>
-                        Mi formación técnica se complementa con un enfoque activo en la **detección y prevención de vulnerabilidades** (🛡️). Actualmente, me encuentro en una fase de intensa especialización (📚), cursando diversos programas avanzados en ciberseguridad defensiva y ofensiva.
+                        Mi formación técnica se complementa con un enfoque activo en la detección y prevención de vulnerabilidades 🛡️. Actualmente, me encuentro en una fase de intensa especialización 📚, cursando diversos programas avanzados en ciberseguridad defensiva y ofensiva.
                     </p>
                     <p>
-                        Mi objetivo inmediato es validar este conocimiento a través de **certificaciones clave de la industria** (🏅), preparándome para ofrecer **servicios profesionales y soluciones de seguridad robustas** dentro de este campo.
+                        Mi objetivo inmediato es validar este conocimiento a través de certificaciones clave de la industria 🏅, preparándome para ofrecer servicios profesionales y soluciones de seguridad robustas dentro de este campo.
                     </p>
                 </div>
 
